	earlier versions.

    o	medpolish {eda} now has an `na.rm' argument (PR#2298).

    o	The internal random number generators will now never return
	values of 0 or 1 for runif.  This might affect simulation
	output in extremely rare cases.  Note that this is not
	guaranteed for user-supplied random-number generators, nor
	when the standalone Rmath library is used.

     o  New function constrOptim for optimisation under linear inequality
        constraints

INSTALLATION CHANGES

    o	TITLE files in packages are no longer used, the Title field
	in the DESCRIPTION file being preferred.  TITLE files will be
	ignored both in installed packages and source packages.

    o	When searching for a Fortran 77 compiler, configure by default
	now also looks for Fujitsu's frt and Compaq's fort, but no
	longer for cf77 and cft77.

    o	Configure checks that mixed C/Fortran code can be run before
	checking compatibility on ints and doubles: the latter test
	was sometimes failing because the Fortran libraries were not
	found.


DEPRECATED & DEFUNCT

    o	The assignment operator `_' will be removed in the next
        release and users are now warned on every usage: you may even see
        multiple warnings for each usage.

        If environment variable R_NO_UNDERLINE is set to anything of
	positive length then use of `_' becomes a syntax error.

    o	machine(), Machine() and Platform() are defunct.

    o	restart() is defunct.  Use try(), as has long been recommended.

    o	The deprecated arguments `pkg' and `lib' of system.file() have
	been removed.


UTILITIES

    o	Rdconv now creates direct HTML hyperlinks when linking to
	documentation in the same package.  The code now ensures that
	links which can be resolved within the package are so resolved,
	even when there are possible resolutions in other packages.


BUG FIXES



	**************************************************
	*						 *
	*	       1.6 SERIES NEWS			 *
	*						 *