@@ -690,6 +690,8 @@ SEXP do_if(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
     SEXP Cond = eval(CAR(args), rho);
 
+    if (length(Cond) > 1)
+	warningcall(call, "the condition has length > 1 and only the first element will be used");
     if (asLogicalNoNA(Cond, call))
 	return (eval(CAR(CDR(args)), rho));
     else if (length(args) > 2)
@@ -817,7 +819,10 @@ SEXP do_while(SEXP call, SEXP op, SEXP args, SEXP rho)
     PROTECT_WITH_INDEX(t, &tpi);
     begincontext(&cntxt, CTXT_LOOP, R_NilValue, rho, R_NilValue, R_NilValue);
     if (SETJMP(cntxt.cjmpbuf) != CTXT_BREAK) {
-	while (asLogicalNoNA(eval(CAR(args), rho), call)) {
+	SEXP Cond = eval(CAR(args), rho);
+	if (length(Cond) > 1)
+	    warningcall(call, "the condition has length > 1 and only the first element will be used");
+	while (asLogicalNoNA(Cond, call)) {
 	    DO_LOOP_DEBUG(call, op, args, rho, bgn);
 	    REPROTECT(t = eval(body, rho), tpi);
 	}
